--- a/app/src/main/res/layout/bridgeton_layout.xml
+++ b/app/src/main/res/layout/bridgeton_layout.xml
@@ -48,30 +48,47 @@
 
                 <Button
                     android:id="@+id/inn_button"
-                    android:layout_width="0dp"
-                    android:layout_height="135dp"
+                    android:layout_width="160dp"
+                    android:layout_height="150dp"
                     android:layout_gravity="center"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginEnd="83dp"
-                    android:layout_marginBottom="338dp"
+                    android:layout_marginEnd="278dp"
                     android:autoSizeTextType="uniform"
                     android:backgroundTint="@android:color/transparent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/general_store_button"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView" />
+                    app:layout_constraintBaseline_toBaselineOf="@+id/general_store_button"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/general_store_button"
+                    android:contentDescription="@string/inn"/>
 
                 <Button
                     android:id="@+id/general_store_button"
-                    android:layout_width="81dp"
-                    android:layout_height="109dp"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
                     android:layout_gravity="center"
-                    android:layout_marginEnd="76dp"
+                    android:layout_marginStart="610dp"
+                    android:layout_marginTop="340dp"
+                    android:layout_marginEnd="78dp"
+                    android:layout_marginBottom="230dp"
                     android:autoSizeTextType="uniform"
                     android:backgroundTint="@android:color/transparent"
-                    app:layout_constraintBottom_toBottomOf="@+id/inn_button"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/inn_button" />
+                    app:layout_constraintBottom_toTopOf="@+id/blacksmith_button"
+                    app:layout_constraintEnd_toStartOf="@+id/inn_button"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:contentDescription="@string/general_store"/>
+
+                <Button
+                    android:id="@+id/blacksmith_button"
+                    android:layout_width="130dp"
+                    android:layout_height="0dp"
+                    android:layout_gravity="center"
+                    android:layout_marginEnd="46dp"
+                    android:layout_marginBottom="424dp"
+                    android:autoSizeTextType="uniform"
+                    android:backgroundTint="@android:color/transparent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/inn_button"
+                    app:layout_constraintTop_toBottomOf="@+id/general_store_button"
+                    android:contentDescription="@string/blacksmith"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
     </HorizontalScrollView>
