--- a/app/src/main/res/layout/thanadel_village_layout.xml
+++ b/app/src/main/res/layout/thanadel_village_layout.xml
@@ -71,7 +71,8 @@
                     android:backgroundTint="@android:color/transparent"
                     app:layout_constraintBottom_toBottomOf="@+id/inn_button"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/inn_button" />
+                    app:layout_constraintStart_toEndOf="@+id/inn_button"
+                    android:tag="@string/thanadel_general_store"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
     </HorizontalScrollView>
