--- a/app/src/main/res/layout/bridgeton_layout.xml
+++ b/app/src/main/res/layout/bridgeton_layout.xml
@@ -74,7 +74,8 @@
                     app:layout_constraintEnd_toStartOf="@+id/inn_button"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    android:contentDescription="@string/general_store"/>
+                    android:contentDescription="@string/general_store"
+                    android:tag="@string/bridgeton_general_store"/>
 
                 <Button
                     android:id="@+id/blacksmith_button"
@@ -88,7 +89,8 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/inn_button"
                     app:layout_constraintTop_toBottomOf="@+id/general_store_button"
-                    android:contentDescription="@string/blacksmith"/>
+                    android:contentDescription="@string/blacksmith"
+                    android:tag="@string/bridgeton_blacksmith"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
     </HorizontalScrollView>
