--- a/app/src/main/res/layout/arduwyn_layout.xml
+++ b/app/src/main/res/layout/arduwyn_layout.xml
@@ -26,57 +26,60 @@
                     android:id="@+id/imageView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="55dp"
                     android:contentDescription="@string/map_descriptor"
                     android:src="@drawable/arduwyn"
-                    app:layout_constraintEnd_toEndOf="@+id/inn_button"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <Button
-                    android:id="@+id/inn_button"
-                    android:layout_width="160dp"
-                    android:layout_height="150dp"
-                    android:layout_gravity="center"
-                    android:layout_marginEnd="278dp"
-                    android:autoSizeTextType="uniform"
-                    android:backgroundTint="@android:color/transparent"
-                    android:contentDescription="@string/inn"
-                    app:layout_constraintBaseline_toBaselineOf="@+id/general_store_button"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/general_store_button" />
-
-                <Button
-                    android:id="@+id/general_store_button"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_gravity="center"
-                    android:layout_marginStart="610dp"
-                    android:layout_marginTop="340dp"
-                    android:layout_marginEnd="78dp"
-                    android:layout_marginBottom="230dp"
-                    android:autoSizeTextType="uniform"
-                    android:backgroundTint="@android:color/transparent"
-                    android:contentDescription="@string/general_store"
-                    android:tag="@string/bridgeton_general_store"
-                    app:layout_constraintBottom_toTopOf="@+id/blacksmith_button"
-                    app:layout_constraintEnd_toStartOf="@+id/inn_button"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <Button
-                    android:id="@+id/blacksmith_button"
-                    android:layout_width="130dp"
-                    android:layout_height="0dp"
+                    android:id="@+id/inn_button"
+                    android:layout_width="96dp"
+                    android:layout_height="92dp"
                     android:layout_gravity="center"
-                    android:layout_marginEnd="46dp"
-                    android:layout_marginBottom="424dp"
+                    android:layout_marginStart="357dp"
+                    android:layout_marginEnd="38dp"
+                    android:layout_marginBottom="134dp"
+                    android:autoSizeTextType="uniform"
+                    android:backgroundTint="@android:color/transparent"
+                    android:contentDescription="@string/inn"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/general_store_button"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/blacksmith_button" />
+
+                <Button
+                    android:id="@+id/general_store_button"
+                    android:layout_width="0dp"
+                    android:layout_height="64dp"
+                    android:layout_gravity="center"
+                    android:layout_marginEnd="263dp"
+                    android:layout_marginBottom="135dp"
+                    android:autoSizeTextType="uniform"
+                    android:backgroundTint="@android:color/transparent"
+                    android:contentDescription="@string/general_store"
+                    android:tag="@string/bridgeton_general_store"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.863"
+                    app:layout_constraintStart_toEndOf="@+id/inn_button"
+                    app:layout_constraintTop_toBottomOf="@+id/blacksmith_button"
+                    app:layout_constraintVertical_bias="1.0" />
+
+                <Button
+                    android:id="@+id/blacksmith_button"
+                    android:layout_width="74dp"
+                    android:layout_height="66dp"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="71dp"
+                    android:layout_marginTop="466dp"
+                    android:layout_marginBottom="31dp"
                     android:autoSizeTextType="uniform"
                     android:backgroundTint="@android:color/transparent"
                     android:contentDescription="@string/blacksmith"
                     android:tag="@string/bridgeton_blacksmith"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/inn_button"
-                    app:layout_constraintTop_toBottomOf="@+id/general_store_button" />
+                    app:layout_constraintBottom_toTopOf="@+id/inn_button"
+                    app:layout_constraintStart_toStartOf="@+id/inn_button"
+                    app:layout_constraintTop_toTopOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
     </HorizontalScrollView>
